finished martini port

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <p>Upload a file:</p>
-    <form action="/" method="POST"
+    <form action="/upload" method="POST"
           enctype="multipart/form-data">
           <input type="file" name="uploaded_file"></input>
           <input type="text" name="foovar"></input>
