--- a/views/index.html
+++ b/views/index.html
@@ -18,9 +18,10 @@
         }
       }
 
-      function uploadFile() {
+      function uploadFile(datasetURI) {
         var fd = new FormData();
         fd.append("fileToUpload", document.getElementById('fileToUpload').files[0]);
+        fd.append("dataset", datasetURI);
         var xhr = new XMLHttpRequest();
         xhr.upload.addEventListener("progress", uploadProgress, false);
         xhr.addEventListener("load", uploadComplete, false);
@@ -43,7 +44,8 @@
       function uploadComplete(evt) {
         /* This event is raised when the server send back a response */
         // alert(evt.target.responseText);
-        alert("TODO: Do not redirect but provide an API response")
+        alert("TODO: Do not redirect but provide an API response" +
+            evt.target.responseText)
         //window.location = evt.target.responseText
       }
 
@@ -55,22 +57,43 @@
         alert("The upload has been canceled by the user or the browser dropped the connection.");
       }
 
-      
+      function triggerUpload() {
+        var fd = new FormData();
+        var createXHR = new XMLHttpRequest();
+        createXHR.addEventListener("load", createComplete, false);
+        createXHR.addEventListener("error", createFailed, false);
+        createXHR.addEventListener("abort", createFailed, false);
+        createXHR.open("POST", "/createcollection");
+        createXHR.send(fd);
+      }
+
+      function createComplete(evt) {
+        var response = JSON.parse(evt.target.responseText)
+        document.getElementById('flash').innerHTML = 'Created dataset '
+          + response.URI
+        uploadFile(response.URI);
+      }
+
+      function createFailed() {
+        document.getElementById('flash').innerHTML = 'Failed to create'
+          + ' dataset - sorry!';
+      }
+
     </script>
 </head>
 <body>
     <p>Upload a file:</p>
-    <form action="/upload" method="POST"
-          enctype="multipart/form-data">
+    <form id="upload_form" enctype="multipart/form-data" action="/upload" method="POST">
       <div class="row">
         <label for="fileToUpload">Select a File to Upload</label><br />
         <input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected();"/>
       </div>
+      <div id="flash"></div>
       <div id="fileName"></div>
       <div id="fileSize"></div>
       <div id="fileType"></div>
       <div class="row">
-        <input type="button" onclick="uploadFile()" value="Upload" />
+        <input type="button" onclick="triggerUpload()" value="Upload" />
       </div>
       <div id="progressNumber"></div>
     </form>
