--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,12 @@
       function uploadFile(datasetURI) {
         var fd = new FormData();
         fd.append("fileToUpload", document.getElementById('fileToUpload').files[0]);
-        fd.append("dataset", datasetURI);
         var xhr = new XMLHttpRequest();
         xhr.upload.addEventListener("progress", uploadProgress, false);
         xhr.addEventListener("load", uploadComplete, false);
         xhr.addEventListener("error", uploadFailed, false);
         xhr.addEventListener("abort", uploadCanceled, false);
-        xhr.open("POST", "/upload");
+        xhr.open("POST", "/upload/"+datasetURI);
         xhr.send(fd);
       }
 
@@ -44,17 +43,16 @@
       function uploadComplete(evt) {
         /* This event is raised when the server send back a response */
         // alert(evt.target.responseText);
-        alert("TODO: Do not redirect but provide an API response" +
-            evt.target.responseText)
-        //window.location = evt.target.responseText
+        window.location = evt.target.responseText
       }
 
       function uploadFailed(evt) {
-        alert("There was an error attempting to upload the file.");
+        document.getElementById('flash').innerHTML = 'Failed to upload'
+          + ' the file';
       }
 
       function uploadCanceled(evt) {
-        alert("The upload has been canceled by the user or the browser dropped the connection.");
+        document.getElementById('flash').innerHTML = 'Upload canceled';
       }
 
       function triggerUpload() {
