--- a/views/_footer.html
+++ b/views/_footer.html
@@ -1,4 +1,8 @@
 {{define "footer"}}
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
 {{end}}
