upload progress bar now displays something :-/

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <form id="upload_form" enctype="multipart/form-data" method="POST">
       <div class="row">
         <label for="fileToUpload">Select a File to Upload</label><br />
-        <input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected();"/>
+        <input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected()"/>
       </div>
       <div id="flash"></div>
       <div id="fileName"></div>
